# PDF2MD

./: .gitignore  CHANGELOG.md  README.md  README_EN.md  pyproject.toml
.github/workflows/: release.yml
docs/releases/: 0.1.2.md
parsing-core-app/: index.html  package-lock.json  package.json  vite.config.ts
parsing-core-app/acceptance/: task-12-mermaid.html  task-12.html
parsing-core-app/scripts/: accept-task-12-business.mjs  accept-task-12-mermaid.mjs  accept-task-12.mjs  build-vision-ocr.sh  prepare-sidecar-python.sh  sidecar_runtime.py  task-12-fixture-server.mjs  tauri.sh
parsing-core-app/src/: App.tsx  index.css
parsing-core-app/src-tauri/: Cargo.toml  tauri.conf.json
parsing-core-app/src-tauri/binaries/: python3
parsing-core-app/src-tauri/capabilities/: main.json
parsing-core-app/src-tauri/icons/: icon.icns
parsing-core-app/src-tauri/src/: main.rs  sidecar.rs  state.rs
parsing-core-app/src-tauri/tests/: test-vision-ocr.sh
parsing-core-app/src-tauri/tests/vision-ocr-fixtures/: make-adversarial-fixtures.swift  make-fixture.swift
parsing-core-app/src-tauri/vision-ocr/: main.swift
scripts/: check-release-sidecar.sh  release_version.py  test-release-sidecar.sh
src/parsing_core/: cli.py  orchestrator.py
tests/: conftest.py  test_cache.py  test_chunker.py  test_cli.py  test_file_lock.py  test_fs_layout.py  test_hashing.py  test_image_extractor.py  test_integration.py  test_markitdown_adapter.py  test_models.py  test_orchestrator.py  test_release_runtime.py  test_release_sidecar.py  test_release_workflow.py  test_repository.py  test_retry.py  test_schema.py  test_stub_client.py  test_version_consistency.py
tests/fixtures/: sample.md  with_base64.md
tests/test_llm/: test_config.py  test_litellm_client.py  test_prompt_build.py
tests/test_serving/: __init__.py  conftest.py  test_api_batches.py  test_api_health.py  test_api_models.py  test_api_tasks.py  test_api_ws.py  test_cli_regression.py  test_orchestrator_progress.py  test_repository_batches.py  test_ring_buffer.py  test_scheduler.py  test_schema_ext.py  test_serve_e2e.py  (+2 more)
(+174 files in other folders)
