[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "parsing-core"
version = "0.1.2"
requires-python = ">=3.11"
dependencies = [
  "markitdown[docx]>=0.0.1",
  "jsonschema>=4.23,<5",
  "opencc-python-reimplemented>=0.1.7,<1",
  "pypdf>=5,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.5",
  "httpx>=0.27",
  "pytest-asyncio>=0.23",
]
llm = ["litellm>=1.50"]
serve = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "websockets>=12.0",
]

[project.scripts]
parsing-core = "parsing_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
parsing_core = ["workbench/ocr/schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --asyncio-mode=auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
