[package]
name = "parsing-core-app"
version = "0.1.2"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
